--- a/CoffeeMaster/coffee.html
+++ b/CoffeeMaster/coffee.html
@@ -14,3 +14,14 @@
  بمتجر القهوة المفضل لديك وقم باللازم Caribouاستبدل محمد باسمك و
     
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+</head>
+<body>
+  <h1>مرحبا انا يوسف</h1>
+  <h2>من كاريبوقهوتي المفضلة احصل عليها </h2>
+  
+</body>
+</html>
